--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "language": "python",
     "author": "amerkay",
     "description": "Smart Water Doser for Farmbot: Checks the weather and calculates how much water to dose each plant. The code is as annotated as could be, so have a look at https://github.com/amerkay/smart-water-doser/",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "min_os_version_major": 6,
     "url": "https://raw.githubusercontent.com/amerkay/smart-water-doser/master/manifest.json",
     "zip": "https://github.com/amerkay/smart-water-doser/archive/master.zip",
@@ -13,7 +13,7 @@
     {
         "name": "plant_search_radius",
         "label": "Use current location to search for closest plant within this radius.",
-        "help": ["Default 40mm +/-"],
+        "help": ["Default 40mm, plus minus"],
         "value": "40"
     },
     {
@@ -38,10 +38,10 @@
         "name": "debug",
         "label": "Debug mode (0-> No FW debug msg, 1-> FW debug msg (default), 2-> No move/exec - do save point data, 3-> simulation, log only)",
         "help": [
-          "0 -> no farmware debug log",
-          "1 -> farmware debug log",
-          "2 -> no move, no execute sequences. Do save point data and farmware debug log",
-          "3 -> simulation mode. No move, no execute sequence, no save meta data. Enable farmware debug log"
+            "0 -> no farmware debug log",
+            "1 -> farmware debug log",
+            "2 -> no move, no execute sequences. Do save point data and farmware debug log",
+            "3 -> simulation mode. No move, no execute sequence, no save meta data. Enable farmware debug log"
         ],
         "value": 1
     }]
