--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-    "package": "Smart Water Doser",
+    "package": "Water Doser",
     "language": "python",
     "author": "amerkay",
-    "description": "Smart Water Doser for Farmbot: Checks the weather and calculates how much water to dose each plant. The code is as annotated as could be, so have a look at https://github.com/amerkay/smart-water-doser/",
-    "version": "0.0.23",
+    "description": "Smart Water Doser for Farmbot: Automatically figures out which plant Farmbot is above and calculates how much water to dose each plant by age and OpenFarm spread and height data. The code is as annotated as could be, so have a look at https://github.com/amerkay/water-doser/",
+    "version": "0.1.0",
     "min_os_version_major": 6,
-    "url": "https://raw.githubusercontent.com/amerkay/smart-water-doser/master/manifest.json",
-    "zip": "https://github.com/amerkay/smart-water-doser/archive/master.zip",
+    "url": "https://raw.githubusercontent.com/amerkay/water-doser/master/manifest.json",
+    "zip": "https://github.com/amerkay/water-doser/archive/master.zip",
     "executable": "python",
-    "args": ["smart-water-doser-master/src/main.py"],
+    "args": ["water-doser-master/src/main.py"],
     "config": [
     {
         "name": "plant_search_radius",
@@ -36,13 +36,13 @@
     },
     {
         "name": "weather_lat",
-        "label": "Your Farmbot's location Latitude from (lat,lon) for weather/rain reports.",
+        "label": "TODO Farmbot's location Latitude from (lat,lon) for weather/rain reports.",
         "help": [""],
         "value": "47.25"
     },
     {
         "name": "weather_lon",
-        "label": "Your Farmbot's location Longitude from (lat,lon) for weather/rain reports.",
+        "label": "TODO Farmbot's location Longitude from (lat,lon) for weather/rain reports.",
         "help": [""],
         "value": "-122.45"
     },
